--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
